k8s_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: jupyter-auto4DSTEM-ingress
spec:
  rules:
  - host: jupyter-auto4DSTEM-service.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyter-auto4DSTEM-svc
            port:
              number: 8888
  tls:
  - hosts:
    - jupyter-auto4DSTEM-service.nrp-nautilus.io
